{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 62,
  "lineage": "3147ff6b-3165-11bb-6256-8e1e53c5ffe5",
  "resources": [
    {
      "module": "module.eks_cluster_dev.module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:security-group/sg-072f4415ddff69b91",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-072f4415ddff69b91",
            "ingress": [],
            "name": "microenterprise-dev-database-20210129171241965600000001",
            "name_prefix": "microenterprise-dev-database-",
            "owner_id": "212285161954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "aurora-microenterprise-dev-database",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": "From allowed CIDRs",
            "from_port": 5432,
            "id": "sgrule-1197560520",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072f4415ddff69b91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.db.aws_db_subnet_group.this",
            "module.eks_cluster_dev.module.db.aws_rds_cluster.this",
            "module.eks_cluster_dev.module.db.aws_security_group.this",
            "module.eks_cluster_dev.module.db.random_id.snapshot_identifier",
            "module.eks_cluster_dev.module.db.random_password.master_password",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:security-group/sg-0d84e99bc949ef6d2",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d84e99bc949ef6d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fa98f377ef19cd0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microenterprise-dev20210126131853562200000006",
            "name_prefix": "microenterprise-dev",
            "owner_id": "212285161954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "microenterprise-dev-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:security-group/sg-01fa98f377ef19cd0",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fa98f377ef19cd0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d84e99bc949ef6d2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d84e99bc949ef6d2"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "microenterprise-dev20210126131855570200000007",
            "name_prefix": "microenterprise-dev",
            "owner_id": "212285161954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "microenterprise-dev-eks_worker_sg",
              "kubernetes.io/cluster/microenterprise-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2148570414",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d84e99bc949ef6d2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.eks.aws_security_group.cluster",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2398383762",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d84e99bc949ef6d2",
            "self": false,
            "source_security_group_id": "sg-01fa98f377ef19cd0",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.eks.aws_security_group.cluster",
            "module.eks_cluster_dev.module.eks.aws_security_group.workers",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-198878752",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01fa98f377ef19cd0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.eks.aws_security_group.workers",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1553160752",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fa98f377ef19cd0",
            "self": false,
            "source_security_group_id": "sg-0d84e99bc949ef6d2",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.eks.aws_security_group.cluster",
            "module.eks_cluster_dev.module.eks.aws_security_group.workers",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-731539921",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fa98f377ef19cd0",
            "self": false,
            "source_security_group_id": "sg-0d84e99bc949ef6d2",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.eks.aws_security_group.cluster",
            "module.eks_cluster_dev.module.eks.aws_security_group.workers",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2572347441",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01fa98f377ef19cd0",
            "self": false,
            "source_security_group_id": "sg-01fa98f377ef19cd0",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.eks.aws_security_group.workers",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09ff2096b241b6672",
            "domain": "vpc",
            "id": "eipalloc-03bdeb2d771c22fbe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02b343f67baa8184a",
            "private_dns": "ip-172-16-4-139.ec2.internal",
            "private_ip": "172.16.4.139",
            "public_dns": "ec2-52-20-233-168.compute-1.amazonaws.com",
            "public_ip": "52.20.233.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "microenterprise-dev-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:internet-gateway/igw-08ae8b5f7e4e818f3",
            "id": "igw-08ae8b5f7e4e818f3",
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bdeb2d771c22fbe",
            "id": "nat-01c1edf248be5ef2e",
            "network_interface_id": "eni-02b343f67baa8184a",
            "private_ip": "172.16.4.139",
            "public_ip": "52.20.233.168",
            "subnet_id": "subnet-010568530f143d71c",
            "tags": {
              "Name": "microenterprise-dev-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_eip.nat",
            "module.eks_cluster_dev.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster_dev.module.vpc.aws_subnet.public",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e1fed277a1f10bd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01c1edf248be5ef2e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1fed277a1f10bd7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_eip.nat",
            "module.eks_cluster_dev.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster_dev.module.vpc.aws_nat_gateway.this",
            "module.eks_cluster_dev.module.vpc.aws_route_table.private",
            "module.eks_cluster_dev.module.vpc.aws_subnet.public",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ae8b5f7e4e818f3",
            "id": "r-rtb-0d11353121e34d4811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d11353121e34d481",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_cluster_dev.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster_dev.module.vpc.aws_route_table.public",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e1fed277a1f10bd7",
            "owner_id": "212285161954",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c1edf248be5ef2e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "microenterprise-dev-vpc-private"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d11353121e34d481",
            "owner_id": "212285161954",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ae8b5f7e4e818f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "microenterprise-dev-vpc-public"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e895a86b1ef0788f",
            "route_table_id": "rtb-0e1fed277a1f10bd7",
            "subnet_id": "subnet-086b4aa262b2481be"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_route_table.private",
            "module.eks_cluster_dev.module.vpc.aws_subnet.private",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53395255c2e7209",
            "route_table_id": "rtb-0e1fed277a1f10bd7",
            "subnet_id": "subnet-0f21ed0f076f503d1"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_route_table.private",
            "module.eks_cluster_dev.module.vpc.aws_subnet.private",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08187490895384fcc",
            "route_table_id": "rtb-0e1fed277a1f10bd7",
            "subnet_id": "subnet-073e2c9dbdf41967a"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_route_table.private",
            "module.eks_cluster_dev.module.vpc.aws_subnet.private",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e94480ee71d075a1",
            "route_table_id": "rtb-0d11353121e34d481",
            "subnet_id": "subnet-010568530f143d71c"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_route_table.public",
            "module.eks_cluster_dev.module.vpc.aws_subnet.public",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd25004bf6c6aad",
            "route_table_id": "rtb-0d11353121e34d481",
            "subnet_id": "subnet-0ac07f06b864eb4ff"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_route_table.public",
            "module.eks_cluster_dev.module.vpc.aws_subnet.public",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0583b8614ec613714",
            "route_table_id": "rtb-0d11353121e34d481",
            "subnet_id": "subnet-010a8ad9316984cc8"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_route_table.public",
            "module.eks_cluster_dev.module.vpc.aws_subnet.public",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:subnet/subnet-086b4aa262b2481be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-086b4aa262b2481be",
            "map_public_ip_on_launch": false,
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc-private-us-east-1a",
              "kubernetes.io/cluster/microenterprise-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:subnet/subnet-0f21ed0f076f503d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-0f21ed0f076f503d1",
            "map_public_ip_on_launch": false,
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc-private-us-east-1b",
              "kubernetes.io/cluster/microenterprise-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:subnet/subnet-073e2c9dbdf41967a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-073e2c9dbdf41967a",
            "map_public_ip_on_launch": false,
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc-private-us-east-1c",
              "kubernetes.io/cluster/microenterprise-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:subnet/subnet-010568530f143d71c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.4.0/24",
            "id": "subnet-010568530f143d71c",
            "map_public_ip_on_launch": true,
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc-public-us-east-1a",
              "kubernetes.io/cluster/microenterprise-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:subnet/subnet-0ac07f06b864eb4ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.5.0/24",
            "id": "subnet-0ac07f06b864eb4ff",
            "map_public_ip_on_launch": true,
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc-public-us-east-1b",
              "kubernetes.io/cluster/microenterprise-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:subnet/subnet-010a8ad9316984cc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.6.0/24",
            "id": "subnet-010a8ad9316984cc8",
            "map_public_ip_on_launch": true,
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc-public-us-east-1c",
              "kubernetes.io/cluster/microenterprise-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0721cfcbadd07eb15"
          },
          "dependencies": [
            "module.eks_cluster_dev.data.aws_availability_zones.available",
            "module.eks_cluster_dev.module.vpc.aws_vpc.this",
            "module.eks_cluster_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster_dev.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks_cluster_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212285161954:vpc/vpc-0721cfcbadd07eb15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0050f2afa1129e726",
            "default_route_table_id": "rtb-0bc7212e32e153a70",
            "default_security_group_id": "sg-02d8dc249b8b32260",
            "dhcp_options_id": "dopt-11a7446b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0721cfcbadd07eb15",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc7212e32e153a70",
            "owner_id": "212285161954",
            "tags": {
              "Name": "microenterprise-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}